添加樣式調整

--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
     <meta charset="UTF-8">
     <!-- 標題 - 網頁標籤 -->
     <title>啤酒介紹</title>
+    <!-- 連結 CSS 檔 -->
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <!-- 網頁身體：所有元素 -->
 
 <body>
     <!-- #card>#content>h1+h2+ul>li*2 -->
+    <!-- div 區塊元素：寬度滿版 -->
     <div id="card">
         <div id="content">
             <h1>7-11 iBeer 生釀啤酒</h1>
